objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Siebel_ID__c</fullName>
        <label>Account Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <label>Address Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_line_3__c</fullName>
        <label>Address line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gore_Integration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Gore Integration ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ININAddressID__c</fullName>
        <externalId>true</externalId>
        <label>ININ Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>address type for post-conversion data</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Address</fullName>
                    <default>true</default>
                    <label>Primary Address</label>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Activation Email</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Order Acknowledgement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validity_Status__c</fullName>
        <label>Validity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Not Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>